--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-    controllerName="sap.ui.demo.template.controller.App"
+    controllerName="sap.ui.demo.template.controller.app"
     displayBlock="true"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc">
