--- a/webapp/view/main.view.xml
+++ b/webapp/view/main.view.xml
@@ -1,11 +1,13 @@
 <mvc:View
-    controllerName="sap.ui.demo.template.controller.main"
+    controllerName="sap.ui.demo.template.controller.Main"
     displayBlock="true"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc">
     <Page id="page" title="{i18n>title}">
         <content>
-            <Text text="Hello World"/>
+            <List items="{/Products}">
+                <StandardListItem type="Active" title="{ProductName}"/>
+            </List>
         </content>
     </Page>
 </mvc:View>
